# phi_anonymize_face

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/phi_anonymize_face/: __init__.py  anonymizer.py  audit.py  cli.py  io_handler.py  result.py  segmentation.py  utils.py
src/phi_anonymize_face/detectors/: __init__.py  base.py  mediapipe_detector.py  opencv_dnn_detector.py  retinaface_detector.py
src/phi_anonymize_face/gui/: __init__.py  app.py  styles.py  worker.py
src/phi_anonymize_face/methods/: __init__.py  blackbox.py  blur.py  pixelate.py
tests/: conftest.py  test_anonymizer.py  test_cli.py  test_detectors.py  test_io.py  test_methods.py
